fixed jumpy h4 in slider animation

--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -35,6 +35,15 @@
   }
 }
 
+@keyframes h4 {
+  from {
+    transform: translateX(-1.5rem);
+  }
+  to {
+    transform: translate(-1.5rem);
+  }
+}
+
 .slider-card-image {
   text-decoration: none;
   margin-left: 1.5rem;
@@ -57,6 +66,7 @@
   text-transform: uppercase;
   font-size: 1.2rem;
   transition: all 0.3s ease-in-out;
+  animation: h4 4.3s;
 }
 
 .BrainhubCarousel {
